Added outro font and worked on outro implementation (still WIP)

--- a/Ambermoon.net/Resources.resx
+++ b/Ambermoon.net/Resources.resx
@@ -121,6 +121,9 @@
   <data name="IntroFont" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\IntroFont.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="OutroFont" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\OutroFont.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="windowIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\windowIcon.raw;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
