--- a/Ambermoon.net/Resources.resx
+++ b/Ambermoon.net/Resources.resx
@@ -121,6 +121,9 @@
   <data name="advanced" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\advanced.pyr;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="borders256" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\borders256.pyr;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="IntroFont" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\IntroFont.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
