--- a/AmbermoonAndroid/Resources.resx
+++ b/AmbermoonAndroid/Resources.resx
@@ -130,6 +130,9 @@
   <data name="diffs" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\raw\diffs.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="donate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\raw\donate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="finger" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\raw\finger.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
