Added quest log icon and fixes

--- a/Ambermoon.net/Resources.resx
+++ b/Ambermoon.net/Resources.resx
@@ -139,4 +139,7 @@
   <data name="windowIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\windowIcon.raw;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="QuestLog" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\QuestLog;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
