--- a/Package/changelog.txt
+++ b/Package/changelog.txt
@@ -2,6 +2,7 @@ Version 1.10
 ============
 
 - Ambermoon Advanced episode 3 is now available
+- Savegame names are now stored in the savegame folder (Saves.cfg) instead of the main config file
 - Fixed/improved some monster animations in battle
 - Fixed a text render bug where a space before a newline produced two newlines
 - Fixed crash when some players fled and the last one gets unable to act (e.g. cursed)
