--- a/Package/changelog.txt
+++ b/Package/changelog.txt
@@ -7,9 +7,11 @@ Version 1.10
 - Fixed a text render bug where a space before a newline produced two newlines
 - Fixed crash when some players fled and the last one gets unable to act (e.g. cursed)
 - Fixed wrong defense values in character info (inventory)
+- Fixed crash when approaching x<6 or y<5 on world maps
 - Minor improvements for fading during 3D map changes
 - Some possible crash fixes
 - Some more Czech text fixes
+- Many smaller fixes and improvements
 
 
 Version 1.9
