--- a/AmbermoonAndroid/Resources.resx
+++ b/AmbermoonAndroid/Resources.resx
@@ -163,4 +163,7 @@
   <data name="com.crashlytics.android.build_id" xml:space="preserve">
     <value>9f337ee3-989d-473b-996a-8ebb44a6043d</value>
   </data>
+  <data name="QuestLog" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\raw\QuestLog;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
