--- a/AmbermoonAndroid/Todo.txt
+++ b/AmbermoonAndroid/Todo.txt
@@ -1,2 +1,11 @@
 ﻿- Update the tutorial to use the new touch pad
 - If you have music off and turn it on while the pyrdacor logo is already running, the music starts from the beginning.
+
+
+New Tutorial:
+
+- New touchpad
+- Eye cursor (interact with hold)
+- Pages of it
+- Portraits + inventory access
+-
